--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Nilo Partner</string>
+    <string name="product_create">Crear</string>
+    <string name="product_msg_loading">Preparando todo...</string>
 </resources>
